# advent-of-code-cxx

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json
aoc2015/day01/: input.txt  main.cc
aoc2015/day02/: input.txt  main.cc
aoc2015/day03/: input.txt  main.cc
aoc2015/day04/: input.txt  main.cc
lib/: lib.hh
overlay-triplets/: x64-windows-clang-mingw64.cmake
toolchains/: mingw64-clang-libstdc++.cmake
